<resources>
    <string name="app_name">Ons Zoetermeer</string>

    <string name="home_title">Home</string>
    <string name="contact_title">Contact</string>
    <string name="contact_title_bar">Er is een vrijwilliger in de buurt</string>
    <string name="vitaliteit_title">Vitaliteit</string>
    <string name="help_title">Hulp</string>
    <string name="achievement_title">Achievement</string>
    <string name="uitloggen_title">Uitloggen</string>
    <string name="loginscreen_title">LoginScreen</string>
    <string name="login_screen_title">LoginScreen</string>
    <string name="map_title">Kaart</string>

    <string name="main_question">Hoe sta ik er nu voor?</string>

    <string name="login_text">"Bent u een bestaande gebruiker? \n     Voer dan uw gegevens in."</string>
    <string name="login_text2">Heeft u nog geen inlog gegevens?</string>
    <string name="login_password_hint">Wachtwoord</string>
    <string name="login_email_hint">E-mail</string>

    <string name="error_invalid_password">Veld mag niet leeg zijn!</string>
    <string name="error_invalid_email">This email address is invalid</string>

    <string name="login_button_password">Wachtwoord\nvergeten</string>
    <string name="login_button_register">Account\naanmaken</string>
    <string name="login_button_login">Inloggen</string>

    <string name="percentageMentaal">0%</string>
    <string name="percentageFysiek">0%</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has
        been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="user">Jolanda Koetsier</string>
    <string name="chat_bericht">Chat bericht</string>
    <string name="sample_text">Sample text</string>
    <string name="standard_time">00:00</string>
    <string name="verstuur">Verstuur</string>
    <string name="switch_details">Vink de uitdaging af als u de uitdaging (of een soortgelijke uitdaging in bijvoorbeeld de krant of een website) heeft voltooid .</string>
    <string name="challenge_details_back_button">Terug naar uitdagingen</string>
    <string name="switch_text">De uitdaging is voltooid.  </string>
    <string name="gebruikersProfiel">Het profiel van een gebruiker</string>
    <string name="user_email">jolandakoetsier@gmail.com</string>
    <string name="title_activity_hulp">Hulp</string>
    <string name="vitality_header">Vitaliteit</string>
    <string name="help_header">Hulp</string>
    <string name="image_button">image button</string>
    <string name="title_activity_profile">Profile</string>
    <string name="bel_1_4_0_7_9">BEL 1-4-0-7-9</string>
    <string name="bel_1_1_2">BEL 1-1-2</string>
    <string name="gemeente_zoetermeer">Gemeente Zoetermeer</string>
    <string name="ambulance_politie_brandweer"><![CDATA[Ambulance, Politie & Brandweer]]></string>


</resources>
