<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <FrameLayout
        android:id="@+id/basic_frame"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@color/colorPrimary">

    </FrameLayout>


    <GridLayout
        android:id="@+id/login_input_grid"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="2"
        android:ems="12"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress" />


    <!--<EditText-->
        <!--android:id="@+id/login_password"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginBottom="30dp"-->
        <!--android:layout_column="1"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_row="3"-->
        <!--android:ems="12"-->
        <!--android:hint="@string/login_password_hint"-->
        <!--android:inputType="textPassword" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_row="3"
            android:layout_column="1"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="Wachtwoord"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="4"
        android:onClick="onClick"
        android:text="@string/login_button_login" />

        <LinearLayout
            android:layout_column="1"
            android:layout_row="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:text="@string/login_button_register" />

            <Button
                android:id="@+id/recovery_button"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="onClick"
                android:text="@string/login_button_password" />

        </LinearLayout>

    </GridLayout>

    <ImageView
        android:id="@+id/ons_zoetermeer_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="125dp"
        android:src="@drawable/ic_logoscreen_logo_login" />

</RelativeLayout>
