<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/chat_left_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp" >

        <ImageView
            android:id="@+id/image_message_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_contact_jolanda"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/chat_bericht" />

        <TextView
            android:id="@+id/text_message_name"
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp" />


        <TextView
            android:id="@+id/chat_left_msg_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="240dp"
            android:text="@string/sample_text"
            android:background="@drawable/textview"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/text_message_name"
            app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/text_message_time_left"
            android:text="@string/standard_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/chat_left_msg_text_view"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/chat_left_msg_text_view" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat_right_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="8dp"

        app:layout_constraintTop_toBottomOf="@+id/chat_left_msg_layout">

        <TextView
            android:id="@+id/chat_right_msg_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:maxWidth="240dp"
            android:text="@string/sample_text"
            android:textSize="20sp"
            android:background="@drawable/textview"
            android:padding="8dp"
            android:textColor="#ffffff"
            app:layout_constraintTop_toBottomOf="@+id/text_message_name"
            app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/text_message_time_right"
            android:text="@string/standard_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/chat_left_msg_text_view"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/chat_left_msg_text_view" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>