<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@color/colorPrimary">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryLight"
            android:columnCount="2">

            <ImageButton
                android:id="@+id/contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:layout_row="0"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:onClick="sendMessage"
                android:scaleType="fitCenter"
                android:src="@drawable/button_contact"
                android:contentDescription="@string/image_button" />

            <ImageButton
                android:id="@+id/vitaliteit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="1dp"
                android:layout_row="0"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:onClick="sendMessage"
                android:scaleType="fitCenter"
                android:src="@drawable/button_vitaliteit"
                android:text="@string/vitaliteit_title"
                android:textColor="@color/colorBlack"
                android:contentDescription="@string/image_button" />
        </GridLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:columnCount="2">

            <ImageButton
                android:id="@+id/hulp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="1dp"
                android:layout_row="1"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:onClick="sendMessage"
                android:scaleType="fitCenter"
                android:src="@drawable/button_hulp"
                android:text="@string/help_title"
                android:textColor="@color/colorBlack"
                android:contentDescription="@string/image_button"/>

            <ImageButton
                android:id="@+id/achievement_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:onClick="sendMessage"
                android:scaleType="fitCenter"
                android:src="@drawable/button_achievement"
                android:text="@string/achievement_title"
                android:textColor="@color/colorBlack"
                android:contentDescription="@string/image_button"/>
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="170dp"
            android:text="@string/main_question"
            android:textAlignment="center"
            android:textColor="@color/ColorText"
            android:textSize="25sp" />

        <GridLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="210dp"
            android:columnCount="3">

            <ImageView
                android:id="@+id/mentaal_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="40dp"
                android:layout_row="0"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_home_mentaal"
                android:contentDescription="@string/image_button"/>

            <ProgressBar
                android:id="@+id/circularProgressbarMentalProfile"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_column="0"
                android:layout_marginStart="40dp"
                android:layout_marginTop="-15dp"
                android:layout_row="1"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/progressbarstyle"
                android:secondaryProgress="100" />

            <TextView
                android:id="@+id/percentageMentaalProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:layout_marginTop="45dp"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/percentageMentaal"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/fysiek_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="80dp"
                android:layout_row="0"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_home_fysiek"
                android:contentDescription="@string/image_button"/>

            <ProgressBar
                android:id="@+id/circularProgressbarPhysicalProfile"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_column="1"
                android:layout_marginStart="80dp"
                android:layout_marginTop="-15dp"
                android:layout_row="1"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/progressbarstyle"
                android:secondaryProgress="100" />

            <TextView
                android:id="@+id/percentageFysiekProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:layout_marginTop="45dp"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/percentageFysiek"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

        </GridLayout>

    </FrameLayout>

</LinearLayout>