<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <FrameLayout
        android:id="@+id/basic_frame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/registration_input_grid"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Gebruikers Achievements"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/profile_recyclerview_achievements"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/achievements_empty_text_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_gravity="center"
            android:text="Nog geen behaalde achievements"
            android:textColor="@color/ColorText"
            android:textSize="15sp"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Gebruikers Hulpverzoeken"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/profile_recyclerview_requests"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/chat_button"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom|center"
            android:onClick="sendMessage"
            android:text="Chat met deze gebruiker"
            android:textAllCaps="false"
            android:background="@drawable/button_rounded"
            android:letterSpacing="0.1"
            android:textColor="@color/ColorText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/mentaal_image"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_column="0"
            android:layout_row="0"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_home_mentaal"
            android:contentDescription="@string/image_button"/>

        <ProgressBar
            android:id="@+id/circularProgressbarMentalProfile"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_marginTop="-15dp"
            android:layout_row="1"
            android:indeterminate="false"
            android:max="100"
            android:progressDrawable="@drawable/profile_progressbarstyle"
            android:secondaryProgress="100" />

        <TextView
            android:id="@+id/percentageMentaalProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginTop="-44dp"
            android:layout_row="1"
            android:gravity="center"
            android:text="@string/percentageMentaal"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ons_zoetermeer_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_profile_user_white_big" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp">


        <ImageView
            android:id="@+id/fysiek_image"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_home_fysiek"
            android:contentDescription="@string/image_button"/>

        <ProgressBar
            android:id="@+id/circularProgressbarPhysicalProfile"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="-15dp"
            android:indeterminate="false"
            android:max="100"
            android:progressDrawable="@drawable/profile_progressbarstyle"
            android:secondaryProgress="100" />

        <TextView
            android:id="@+id/percentageFysiekProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-44dp"
            android:gravity="center"
            android:text="@string/percentageFysiek"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />

    </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/profile_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="155dp"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:text="Gebruikersnaam"/>
</RelativeLayout>
